# langgraph-intro

./: .env.example  .gitignore  1_basic_graph.py  Dockerfile  README.md  Revenue Difference Investigation.ipynb  app.py  chat.py  langgraph.json  pyproject.toml  setup.py
.langgraph_api/: .langgraph_ops.pckl
frontend/: chat_deployed.py  chat_local.py
onlyvans/: env.py  graph.py  prompts.py  tools.py
sample_data/: creators_2023.csv  customers_2023.csv  transactions_2023_2024.csv
scout/: env.py  graph.py  tools.py
scout/prompts/: prompts.py  scout.md
